# backend/src/public/swagger.json
@@ -1188,6 +1188,37 @@
 				"parameters": []
 			}
 		},
+		"/api/meal/{name}": {
+			"get": {
+				"operationId": "GetMealWithName",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Meal"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"meal"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "name",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/api/meal": {
 			"get": {
 				"operationId": "GetMeals",
@@ -1207,6 +1238,7 @@
 					}
 				},
 				"tags": [
+					"meal",
 					"meal"
 				],
 				"security": [],
